force-app/main/default/objects/OCE__Opt__c/OCE__Opt__c.object-meta.xml
<CustomObject>
    <description>Object for gathering overal subscriptions to Topics.</description>
    <label>Opt</label>
    <nameField>
        <label>Opt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>