force-app/main/default/objects/OCE__Opt__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opts</relationshipLabel>
    <relationshipName>Opts</relationshipName>
    <type>Lookup</type>
</CustomField>