force-app/main/default/objects/OCE__Opt__c/fields/OCE__AccountRestrictedProducts__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountRestrictedProducts__c</fullName>
    <description>Stores combined json with info about current value of Account.RestrictedProductsJSON__c</description>
    <label>Account Restricted Products</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>