force-app/main/default/objects/OCE__Opt__c/fields/OCE__Active__c.field-meta.xml
<CustomField>
    <fullName>OCE__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Formula to define if current Opt is Active (latest).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>