force-app/main/default/objects/OCE__Opt__c/fields/OCE__ATFRestrictedProducts__c.field-meta.xml
<CustomField>
    <fullName>OCE__ATFRestrictedProducts__c</fullName>
    <description>The list of products that are restricted for the Account-Territory combination.</description>
    <label>ATF Restricted Products</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>