force-app/main/default/objects/OCE__Opt__c/fields/OCE__ChannelOpt__c.field-meta.xml
<CustomField>
    <fullName>OCE__ChannelOpt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Channel Opt. Applied to Topic level opts.</description>
    <label>Channel Opt</label>
    <referenceTo>OCE__Opt__c</referenceTo>
    <relationshipLabel>Opts</relationshipLabel>
    <relationshipName>ChannelOpts</relationshipName>
    <type>Lookup</type>
</CustomField>