force-app/main/default/objects/OCE__Opt__c/fields/OCE__DisclaimerText__c.field-meta.xml
<CustomField>
    <fullName>OCE__DisclaimerText__c</fullName>
    <description>Denormalized disclaimer text.</description>
    <label>Disclaimer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>