force-app/main/default/objects/OCE__Opt__c/fields/OCE__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>OCE__DocumentId__c</fullName>
    <description>Account signed Document ID.</description>
    <label>Document ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>