force-app/main/default/objects/OCE__Opt__c/fields/OCE__GeolocationCheckDateTimeOnSignature__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeolocationCheckDateTimeOnSignature__c</fullName>
    <description>Time of GPS was collected</description>
    <label>GeolocationCheckDateTimeOnSignature</label>
    <type>DateTime</type>
</CustomField>