force-app/main/default/objects/OCE__Opt__c/fields/OCE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsActive__c</fullName>
    <description>Formula to define if current Opt is Active (latest).</description>
    <formula>OCE__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>