force-app/main/default/objects/OCE__Opt__c/fields/OCE__IsChannelOpt__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsChannelOpt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if record is Channel Opt.</description>
    <label>Is Channel Opt</label>
    <type>Checkbox</type>
</CustomField>