force-app/main/default/objects/OCE__Opt__c/fields/OCE__OptDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OptDate__c</fullName>
    <description>Date of signed Opt.</description>
    <label>Opt Date</label>
    <type>DateTime</type>
</CustomField>