force-app/main/default/objects/OCE__Opt__c/fields/OCE__ParentTopic__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to subscribed Topic ( Can be only parent Topic).</description>
    <label>Parent Topic</label>
    <referenceTo>OCE__Topic__c</referenceTo>
    <relationshipLabel>Opts</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>