force-app/main/default/objects/OCE__Opt__c/fields/OCE__RequestReceipt__c.field-meta.xml
<CustomField>
    <fullName>OCE__RequestReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Account want to receive receipt.</description>
    <label>Request Receipt</label>
    <type>Checkbox</type>
</CustomField>