force-app/main/default/objects/OCE__Opt__c/fields/OCE__RestrictedProductsOverride__c.field-meta.xml
<CustomField>
    <fullName>OCE__RestrictedProductsOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores value of current Account.AllowRestrictedProducts__c</description>
    <label>Restricted Products Override</label>
    <type>Checkbox</type>
</CustomField>