force-app/main/default/objects/OCE__Opt__c/fields/OCE__SalesRep__c.field-meta.xml
<CustomField>
    <fullName>OCE__SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Sales Representative.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>