force-app/main/default/objects/OCE__Opt__c/fields/OCE__Signature__c.field-meta.xml
<CustomField>
    <fullName>OCE__Signature__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Account signature.</description>
    <label>Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>