force-app/main/default/objects/OCE__Opt__c/fields/OCE__Source__c.field-meta.xml
<CustomField>
    <fullName>OCE__Source__c</fullName>
    <description>Source of Opt.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>MCM</fullName>
            </value>
            <value>
                <fullName>OCE Connect</fullName>
            </value>
            <value>
                <fullName>OCE Web</fullName>
            </value>
            <value>
                <fullName>OCE Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>