force-app/main/default/objects/OCE__Opt__c/fields/OCE__TermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>OCE__TermsAndConditions__c</fullName>
    <description>Denormalized Terms And Conditions</description>
    <label>Terms And Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>