force-app/main/default/objects/OCE__Opt__c/listViews/OCE__All.listView-meta.xml
<ListView>
    <fullName>OCE__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>